[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/Stalker/stalker.png" type="Texture" id=1]
[ext_resource path="res://Stalker/Stalker.gd" type="Script" id=2]
[ext_resource path="res://Stalker/PlayerDetectArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stalker/LightDetectionArea.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.37222
height = 14.0593

[sub_resource type="CircleShape2D" id=2]
radius = 132.078

[sub_resource type="CircleShape2D" id=3]
radius = 138.783

[node name="Stalker" type="KinematicBody2D"]
position = Vector2( 8, 72 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.397758, 2.68489 )
shape = SubResource( 1 )

[node name="PlayerDetectArea" parent="." instance=ExtResource( 3 )]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerDetectArea"]
shape = SubResource( 2 )

[node name="LightDetectionArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightDetectionArea"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="area_entered" from="LightDetectionArea" to="LightDetectionArea" method="_on_LightDetectionArea_area_entered"]
[connection signal="area_exited" from="LightDetectionArea" to="LightDetectionArea" method="_on_LightDetectionArea_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
